Switch to ParNewGC+ConcMarkSweepGC because G1GC is too slow since 8u40